Fix image overflowing on mobile layout

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -20,8 +20,6 @@ main {
         border-radius: 2px;
         padding: 20px;
         .mainpage-profile-image {
-          height: 100%;
-          max-height: calc(40vh + 5px);
           div.gatsby-image-wrapper {
             width: auto;
             border-radius: 1000px;
